@@ -3,21 +3,18 @@ package com.example;
 import com.sun.net.httpserver.HttpServer;
 import java.io.*;
 import java.net.InetSocketAddress;
+import java.net.URI;
+import java.util.HashMap;
 
 public class App {
     public static void main(String[] args) throws Exception {
 
         HttpServer server = HttpServer.create(new InetSocketAddress(8080), 0);
 
+        // Serve HTML
         server.createContext("/", exchange -> {
-            File file = new File("src/main/resources/index.html");
-            byte[] response = new byte[0];
-
-            try {
-                response = java.nio.file.Files.readAllBytes(file.toPath());
-            } catch (IOException e) {
-                response = "<h1>File not found</h1>".getBytes();
-            }
+            InputStream is = App.class.getClassLoader().getResourceAsStream("index.html");
+            byte[] response = is.readAllBytes();
 
             exchange.sendResponseHeaders(200, response.length);
             OutputStream os = exchange.getResponseBody();
@@ -25,8 +22,39 @@ public class App {
             os.close();
         });
 
-        server.start();
+        // Calculator API
+        server.createContext("/calc", exchange -> {
+            URI uri = exchange.getRequestURI();
+            String query = uri.getQuery();
 
-        System.out.println("Server started at http://localhost:8080");
+            HashMap<String, String> params = new HashMap<>();
+            for (String pair : query.split("&")) {
+                String[] kv = pair.split("=");
+                params.put(kv[0], kv[1]);
+            }
+
+            double a = Double.parseDouble(params.get("a"));
+            double b = Double.parseDouble(params.get("b"));
+            String op = params.get("op");
+
+            double result = 0;
+
+            switch (op) {
+                case "+": result = a + b; break;
+                case "-": result = a - b; break;
+                case "*": result = a * b; break;
+                case "/": result = (b != 0) ? a / b : 0; break;
+            }
+
+            String response = String.valueOf(result);
+
+            exchange.sendResponseHeaders(200, response.length());
+            OutputStream os = exchange.getResponseBody();
+            os.write(response.getBytes());
+            os.close();
+        });
+
+        server.start();
+        System.out.println("Server running at http://localhost:8080");
     }
 }
